# ccguard

./: .gitignore  CLAUDE.md  LICENSE  README.md  index.html  pyproject.toml
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md  config.json
.planning/phase-01-tool-use-audit-foundation/: 01-01-PLAN.md  01-01-SUMMARY.md  01-02-PLAN.md  01-02-SUMMARY.md  01-03-PLAN.md  01-03-SUMMARY.md  01-04-PLAN.md  01-04-SUMMARY.md  01-05-PLAN.md  01-05-SUMMARY.md  01-06-PLAN.md  01-06-SUMMARY.md  01-CONTEXT.md  01-RESEARCH.md  01-REVIEW.md  01-UI-REVIEW.md  01-UI-SPEC.md  01-VERIFICATION.md  deferred-items.md
.planning/phase-02-anomaly-detection/: 02-01-PLAN.md  02-01-SUMMARY.md  02-02-PLAN.md  02-02-SUMMARY.md  02-03-PLAN.md  02-03-SUMMARY.md  02-04-PLAN.md  02-04-SUMMARY.md  02-05-PLAN.md  02-05-SUMMARY.md  02-06-PLAN.md  02-06-SUMMARY.md  02-CONTEXT.md  02-RESEARCH.md  02-REVIEW.md  02-UI-SPEC.md  02-VERIFICATION.md
.planning/phase-03-llm-content-scanner/: 03-01-PLAN.md  03-01-SUMMARY.md  03-02-PLAN.md  03-02-SUMMARY.md  03-03-PLAN.md  03-03-SUMMARY.md  03-04-PLAN.md  03-04-SUMMARY.md  03-05-PLAN.md  03-05-SUMMARY.md  03-06-PLAN.md  03-06-SUMMARY.md  03-CONTEXT.md  03-RESEARCH.md  03-REVIEW.md  03-UI-REVIEW.md  03-UI-SPEC.md  03-VERIFICATION.md
.planning/phase-04-push-install/: 04-01-PLAN.md  04-01-SUMMARY.md  04-02-PLAN.md  04-02-SUMMARY.md  04-03-PLAN.md  04-03-SUMMARY.md  04-04-PLAN.md  04-04-SUMMARY.md  04-05-PLAN.md  04-05-SUMMARY.md  04-06-PLAN.md  04-06-SUMMARY.md  04-CONTEXT.md  04-RESEARCH.md  04-REVIEW.md  04-UI-REVIEW.md  04-UI-SPEC.md  04-VERIFICATION.md
docker/: Dockerfile.agent  Dockerfile.server  Dockerfile.test  docker-compose.yml
docs/: BRAINSTORM.md  HOOKS_PROTOCOL.md  PLAN.md  REFLEXION.md  SPEC.md
examples/: config.example.yaml  policy.example.yaml  server_config.example.yaml
scripts/: attack_simulator.py
tests/: _snapshot.py  conftest.py
(+317 files in other folders)
