[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ccguard"
version = "0.1.0"
description = "EDR for Claude Code — endpoint agent + central server for configuration governance"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "timderbak" }]
keywords = ["claude-code", "security", "governance", "edr", "mcp"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
]
dependencies = [
    "pydantic>=2.7",
    "typer>=0.12",
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "sqlmodel>=0.0.16",
    "httpx>=0.27",
    "pyyaml>=6.0",
    "platformdirs>=4.2",
    "jinja2>=3.1",
    "python-multipart>=0.0.9",
    "passlib[bcrypt]>=1.7",
    "itsdangerous>=2.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "ruff>=0.4",
    "mypy>=1.10",
    "types-PyYAML>=6.0",
    "pyinstaller>=6.0",
]

[project.scripts]
ccguard = "ccguard.agent.cli:app"
ccguard-server = "ccguard.server.main:serve"
ccguard-enforce-bin = "ccguard.agent.enforce_main:main"
ccguard-audit-bin = "ccguard.agent.audit_main:main"

[tool.hatch.build.targets.wheel]
packages = ["src/ccguard"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "SIM"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_unreachable = true
disallow_untyped_defs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra -q"
markers = [
    "e2e: end-to-end tests requiring docker compose",
    "integration: integration tests against a real server",
]
